[package]
name = "async_thrift"
description = "Rust bindings for the Apache Thrift RPC system"
version = "0.14.0"
license = "Apache-2.0"
authors = ["Apache Thrift Developers <dev@thrift.apache.org>"]
homepage = "http://thrift.apache.org"
documentation = "https://thrift.apache.org"
readme = "README.md"
exclude = ["Makefile*", "test/**", "*.iml"]
keywords = ["thrift"]
edition = "2018"

[features]
rt-tokio = ["dep:tokio"]
rt-async-std = ["dep:async-std"]

[dependencies]
ordered-float = "4.2.2"
byteorder = "1.3"
log = "0.4"
async-std = { version = "1.13.0", optional = true }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "io-util", "net"], optional = true }
async-trait = "0.1.40"
